Edit: Plugin Config

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -2,7 +2,7 @@
   "cssTheme": "Minimal",
   "interfaceFontFamily": "NanumSquare Neo",
   "textFontFamily": "MaruBuri",
-  "accentColor": "#d3c6aa",
+  "accentColor": "#82807d",
   "baseFontSize": 15,
   "theme": "system"
 }
